# wio

./: .gitignore  CMakeLists.txt  ORDERED_TODOLIST.md  README.md  TODOLIST.md  UPDATELOG.md  ast.cpp  ast.h  base.h  exception.h  lexer.h  main.cpp  parser.cpp  parser.h  token.h
app/: CMakeLists.txt  main.cpp
cmake/: RunWioEmitCppExpectFile.cmake  RunWioExpectFailure.cmake  RunWioExpectSuccess.cmake  RunWioHostInterop.cmake  RunWioSharedReloadInterop.cmake  WioProject.cmake
compiler/: CMakeLists.txt
compiler/include/: compiler.h
compiler/include/general/: core.h  result_values.h
compiler/include/general/traits/: float_traits.h  integer_traits.h  trait_base.h
compiler/include/runtime/: fit.h  io.h  module_api.h  ref.h  std_assert.h  std_console.h  std_fs.h  std_io.h
compiler/include/runtime/helpers/: io_helpers.h
compiler/include/wio/ast/: ast.h  ast_nodes.def  ast_visitor.h  visitor_overloads.def
compiler/include/wio/codegen/: cpp_generator.h  mangler.h
compiler/include/wio/common/: auto_flags.h  exception.h  location.h  logger.h  smart_ptr.h  utility.h
compiler/include/wio/common/filesystem/: filesystem.h  filesystem.inl
compiler/include/wio/lexer/: lexer.h  token.h
compiler/include/wio/parser/: parser.h
compiler/include/wio/runtime/: loader.h
compiler/include/wio/runtime/std_loaders/: io_loader.h
compiler/include/wio/sema/: analyzer.h  intrinsic_member_resolver.h  scope.h  symbol.h  type.h  type_context.h
compiler/src/: compiler.cpp
compiler/src/wio_compiler/ast/: ast.cpp
compiler/src/wio_compiler/codegen/: cpp_generator.cpp  mangler.cpp
compiler/src/wio_compiler/common/: logger.cpp  utility.cpp
compiler/src/wio_compiler/common/filesystem/: filesystem.cpp
compiler/src/wio_compiler/lexer/: lexer.cpp  token.cpp
compiler/src/wio_compiler/parser/: parser.cpp
compiler/src/wio_compiler/runtime/std_loaders/: io_loader.cpp
compiler/src/wio_compiler/sema/: analyzer.cpp  intrinsic_member_resolver.cpp  scope.cpp  type.cpp  type_context.cpp
docs/: WIO_LANGUAGE_DRAFT.md  WIO_PROJECT_SYSTEM.md  WIO_SDK.md  WIO_STD.md  WIO_TRACEABILITY.md
examples/hybrid_arena/: README.md  arena_bridge.wio  arena_module.wio  arena_shared.wio  hybrid_arena_host.cpp  hybrid_arena_native.cpp  hybrid_arena_native.h
examples/static_cmake_consumer/: CMakeLists.txt  README.md  wio.makewio
examples/static_cmake_consumer/host/: main.cpp
examples/static_cmake_consumer/wio/: module.wio
libs/argonaut/: CMakeLists.txt
libs/coco/: CMakeLists.txt
libs/dtlog/: CmakeLists.txt
libs/frenum/: CMakeLists.txt
playground/: main.wio  native_bridge.wio  native_math.cpp  test.wio
runtime/: CMakeLists.txt
runtime/include/: exception.h  intrinsics.h  meta.h  std_assert.h  std_console.h  std_fs.h  std_math.h
runtime/src/: std_assert.cpp  std_console.cpp  std_fs.cpp  std_math.cpp
runtime/src/detail/: io_helpers.h
scripts/: Build-Wio.ps1  Invoke-WioProject.ps1  Invoke-WithSanitizedPath.ps1  New-WioProject.ps1  Pack-Wio.ps1  Run-HybridArenaDemo.ps1  Run-WioFile.ps1  Run-WioHostInterop.ps1  Test-Wio.ps1
sdk/: CMakeLists.txt
sdk/include/: module_api.h  wio_sdk.h
src/: application.cpp  application.h  ast.cpp  ast.h  base.h  builtin.cpp  builtin.h  evaluator.cpp  evaluator.h  exception.h  interpreter.cpp  interpreter.h  lexer.h  parser.cpp  parser.h  scope.cpp  scope.h  token.h
src/base/: argument_parser.cpp  argument_parser.h  base.h  exception.h  location.h
src/builtin/: b_array.cpp  b_array.h  b_dictionary.cpp  b_dictionary.h  b_string.cpp  b_string.h  b_vec2.cpp  b_vec2.h  builtin_base.h  builtin_manager.cpp  builtin_manager.h  helpers.cpp  helpers.h  internal.cpp  internal.h  io.cpp  io.h  math.cpp  math.h  scientific.cpp  scientific.h  system.cpp  system.h  types.cpp  types.h  utility.cpp  utility.h
src/interpreter/: ast.cpp  ast.h  base.h  eval_base.cpp  eval_base.h  evaluator.cpp  evaluator.h  evaluator_helper.cpp  evaluator_helper.h  exception.h  lexer.cpp  lexer.h  main_table.cpp  main_table.h  module_tracker.cpp  module_tracker.h  parser.cpp  parser.h  scope.cpp  scope.h  symbol.cpp  symbol.h  token.h
src/types/: comparator.h  file_wrapper.cpp  file_wrapper.h  pair.h  vec2.cpp  vec2.h  vec2.inl  vec3.cpp  vec3.h  vec3.inl  vec4.cpp  vec4.h
src/utils/: any.h  buffer.h  file_wrapper.cpp  file_wrapper.h  filesystem.cpp  filesystem.h  frenum.h  minimal_ref.h  rand_manager.cpp  rand_manager.h  ref_counter.h  util.cpp  util.h  uuid.h
src/variables/: array.cpp  array.h  dictionary.cpp  dictionary.h  enum.cpp  enum.h  function.cpp  function.h  function_param.h  (+10 more)
std/: algorithms.wio  assert.wio  collections.wio  console.wio  fs.wio  io.wio  io2.wio  math.wio  meta.wio  path.wio  strings.wio  traits.wio
tests/: Test.txt  all_tests.wio  array_member_methods.wio  c_style_for_loop.wio  component_embedded_member_ctor.wio  const_scalar_expressions.wio  control_flow_return_analysis_run.wio  cpp_header_use_statement.wio  cpp_reserved_identifier_codegen.wio  default_parameters_run.wio  dictionary_member_methods.wio  direct_index_out_of_range_runtime_failure.wio  direct_indexing_run.wio  factory_chain_call_run.wio  fit_numeric_clamp.wio  for_array_index_value.wio  for_component_binding.wio  for_component_index_binding.wio  for_component_index_binding_step.wio  for_component_ref_binding_arithmetic.wio  for_dict_key_value.wio  for_dict_view_ref_binding.wio  for_in_dynamic_array.wio  for_in_exclusive_range.wio  for_in_inclusive_range.wio  for_in_range_step_negative.wio  for_in_range_step_positive.wio  for_in_static_array.wio  for_parenthesized_array_step.wio  for_ref_view_array.wio  foreach_dynamic_array.wio  function_parameter_pack_constraints_run.wio  function_parameter_pack_defaults_run.wio  function_parameter_pack_explicit_type_arguments_run.wio  function_parameter_pack_run.wio  function_value_nested_call_run.wio  generic_apply_function_constraints.wio  generic_apply_type_and_object_run.wio  generic_component_constructor_deduction.wio  generic_component_constructor_expected_type.wio  (+73 more)
utils/: any.h
variables/: array.h  dictionary.h  function.h  variable.h
(+245 files in other folders)
